--- a/App.config
+++ b/App.config
@@ -1,25 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-  </startup>
-  <connectionStrings>
-    <add name="EstudioEpidemiologicoEntities" connectionString="metadata=res://*/Models.EstudioEpidemiologicoModels.csdl|res://*/Models.EstudioEpidemiologicoModels.ssdl|res://*/Models.EstudioEpidemiologicoModels.msl;provider=System.Data.SqlClient;
-		 provider connection string=&quot;data source=192.168.1.102\maxcom;
-		 initial catalog=EstudioEpidemiologico;persist security info=True;user id=maxcom;password=Uni12345;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
+	<configSections>
+		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+	</configSections>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+	</startup>
+	<connectionStrings>
+	
+	<add name="EstudioEpidemiologicoEntities" connectionString="metadata=res://*/Models.EstudioEpidemiologicoModels.csdl|res://*/Models.EstudioEpidemiologicoModels.ssdl|res://*/Models.EstudioEpidemiologicoModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.102\maxcom;initial catalog=EstudioEpidemiologico;persist security info=True;user id=maxcom;password=Uni12345;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+
+	<appSettings>
+		<add key="dirFormato" value="C:\ProyectosNET2020\OneProject.MedicalForms\OneProject.Medical.Forms\Formatos" />
+		<add key="dirSalidas" value="C:\ProyectosNET2020\OneProject.MedicalForms\OneProject.Medical.Forms\Formatos\Salidas" />
+		<add key="formato" value="Estudio_de_caso_nCOV_2020" />
+	</appSettings>
+
+	<entityFramework>
+		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+			<parameters>
+				<parameter value="mssqllocaldb" />
+			</parameters>
+		</defaultConnectionFactory>
+		<providers>
+			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+		</providers>
+	</entityFramework>
 </configuration>
