--- a/OneProject.Medical.Forms.csproj
+++ b/OneProject.Medical.Forms.csproj
@@ -174,6 +174,7 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>EstudioEpidemiologicoModels.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="Formatos\Estudio_de_caso_nCOV_2020.xlsx" />
     <None Include="Models\EstudioEpidemiologicoModels.edmx.diagram">
       <DependentUpon>EstudioEpidemiologicoModels.edmx</DependentUpon>
     </None>
@@ -210,6 +211,7 @@
     <Content Include="Imagenes\color\prueba.png" />
     <Content Include="Imagenes\color\salr.png" />
     <Content Include="Imagenes\imprimir.gif" />
+    <Content Include="Imagenes\llaves.png" />
     <Content Include="Imagenes\pago.gif" />
     <Content Include="Imagenes\prueba.gif" />
     <Content Include="Imagenes\pruebae.ico" />
